                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 28-12-2004 fixed: [ 1090394 ] Autoswitch FIX for "ByFiles" type (Thnx to kraqh3d)
  - 28-12-2004 updated: Danish language file (Thnx to twinther)
  - 28-12-2004 fixed: shoutcast playing hangs when cd+g is enabled
  - 27-12-2004 fixed: language code expansion didn't work if running as dash
  - 25-12-2004 changed: removed specification of first subtitle to allow new mplayer.dll to function properly
  - 23-12-2004 fixed: [ 1087503 ] DVD XBE Title being cached in database.
  - 23-12-2004 fixed: Audio cache was always set to 0.
  - 22-12-2004 updated: Italian language file (Thnx to kotix)
  - 22-12-2004 updated: Portuguese (Brazil) language file (Thnx to wellingtontu)
  - 22-12-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 22-12-2004 updated: Finnish language file (Thnx to jutski)
  - 22-12-2004 fixed: [ 1089975 ] Hebrew language file broken
  - 22-12-2004 fixed: reciever looses ac3/dts sync and gets it again when starting playback
  - 21-12-2004 fixed: lock of a share can't be removed if maxretry is set to 0
  - 21-12-2004 fixed: locked shares can be added to the playlists
  - 21-12-2004 updated: Polish language file (Thnx to napek)
  - 21-12-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 21-12-2004 updated: Spanish language file (Thnx to elotrolado)
  - 21-12-2004 updated: Norwegian language file (Thnx to vnmartinsen)
  - 21-12-2004 fixed: thumbnailcache broken
  - 21-12-2004 fixed: music scanning and reading from database broken (database has to be rescanned)
  - 21-12-2004 fixed: incorrect imdb plot due to imdb url changes.