@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 28-12-2004 fixed: shoutcast top 500, first stream disappears when Hide parent folder items is enabled
   - 28-12-2004 fixed: [ 1090394 ] Autoswitch FIX for "ByFiles" type (Thnx to kraqh3d)
   - 28-12-2004 updated: Danish language file (Thnx to twinther)
   - 28-12-2004 fixed: shoutcast playing hangs when cd+g is enabled
